# Core

./: Iris.sh
iris/: Iris.sh  IrisAndServer.sh
iris/web_ui/: index.html  instruções.txt  package.json
iris/web_ui/src/: App.tsx  index.css  types.ts
iris/web_ui/src/backend/lcm_cpp_server/: CMakeLists.txt  main.cpp
iris/web_ui/src/backend/lcm_cpp_server/handlers/: handlers.cpp  handlers.hpp
iris/web_ui/src/components/: DataView.tsx  DataViewAll.tsx  FieldView.tsx  MenuBar.tsx  MenuButton.tsx  TeamSelector.tsx  TopMenuBar.tsx  UtilityMenu.tsx
iris/web_ui/src/components/sections/: CPA_IASection.tsx  CaronteSection.tsx  GCSection.tsx  IASection.tsx  TartarusSection.tsx  VisionSection.tsx
iris/web_ui/src/data/: fieldDimensions.ts  initialData.ts
iris/web_ui/src/hooks/: useFetchData.ts  useFetchLoop.ts  useSendData.ts  useSendPost.ts
